fdo#74121 - Accessibility broken on Mac OS X (master)

The commit 461e0f9eaf9895ecd0eba67b35a4d2cec8a5e5c5 broke accessibility
on Mac. This patch tweeks two changes in the original commit and at
least removes the accessibility warnings about the wrong window being
reported as parent.

Change-Id: I0faa631d22376adc08a191ba5937363d1dee059e
Reviewed-on: https://gerrit.libreoffice.org/7837
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>